fix: overflow-text-error

--- a/client/src/components/styles/ConversationCard.scss
+++ b/client/src/components/styles/ConversationCard.scss
@@ -28,25 +28,33 @@ $secondary-color: #17252A;
         justify-content: space-between;
 
         .conversation-card-text-box{
+            width: 60%;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
 
             .conversation-card-fullname{
+                width: 100%;
                 font-size: 16px;
                 font-weight: 600;
                 color: $secondary-color;
             }
             .conversation-card-desc{
+                width: 100%;
+                height: 15px;
+                margin-top: 2.5px;
                 font-size: 10px;
                 font-weight: 400;
                 color: $secondary-color;
+                overflow: hidden;
             }
         }
 
         .conversation-card-time{
+            width: 40%;
             display: flex;
             align-items: flex-end;
+            justify-content: flex-end;
             font-size: 10px;
             font-weight: 400;
             color: $secondary-color;
